# cr8s

./: Cargo.toml  docker-compose.yml
migrations/2024-09-09-172325_create_rustaceans/: up.sql
migrations/2024-09-09-172344_create_crates/: down.sql  up.sql
src/: main.rs  models.rs  repositories.rs
