[package]
name = "cr8t"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
serde = "1.0"
